--- a/Example/markymark/Base.lproj/Main.storyboard
+++ b/Example/markymark/Base.lproj/Main.storyboard
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ps2-qg-buB">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ps2-qg-buB">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -60,7 +57,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2h4-cu-cUk" customClass="MarkDownTextView" customModule="markymark">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2h4-cu-cUk" customClass="MarkDownTextView" customModule="markymark">
                                 <rect key="frame" x="20" y="20" width="335" height="629.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
@@ -117,7 +114,7 @@ Lorem ipsum *dolor* sit amet, __consectetur__ adipiscing elit. Proin ***aliquet 
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QeQ-5T-l2v" customClass="MarkdownAttributedLabel" customModule="markymark">
-                                <rect key="frame" x="16" y="47" width="343" height="152"/>
+                                <rect key="frame" x="16" y="27" width="343" height="142.5"/>
                                 <string key="text">Simple lightweight Markdown label that supports *italic*, **bold**, ~~strikethrough~~ and [Links](https://www.somelink.com).
 
 Can also be used to create labels with custom text styling such as line-height</string>
@@ -150,10 +147,7 @@ Can also be used to create labels with custom text styling such as line-height</
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="56J-Ir-c6U" kind="relationship" relationship="viewControllers" id="wcx-LJ-WJb"/>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="pgZ-lX-2Qp"/>
                         <segue destination="uJz-O1-MGe" kind="relationship" relationship="viewControllers" id="O43-d6-vwf"/>
-                        <segue destination="2fV-Im-Laa" kind="relationship" relationship="viewControllers" id="V5M-s7-bxg"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E6f-Tz-hPT" userLabel="First Responder" sceneMemberID="firstResponder"/>
